Added the global settings

--- a/src/main/webapp/app/home.html
+++ b/src/main/webapp/app/home.html
@@ -41,6 +41,8 @@
           <li><a class="dropdown-item" href="#" onclick="settingFlow.popupPanel();">Materialflow Settings</a></li>
           <li><a class="dropdown-item" href="#" onclick="settingWhitelist.popupPanel();">User White List</a></li>
           <li><hr class="dropdown-divider"></li>
+          <li><a class="dropdown-item" href="#" onclick="modalGlobalSetting.showSettingDetail();">Global Setting</a></li>
+          <li><hr class="dropdown-divider"></li>
           <!-- <li><a class="dropdown-item" href="#" onclick="signOut();"><i class="bi bi-power"></i> Sign out</a></li> -->
           <li><a class="dropdown-item" href="./auth/logout.json" style="color:red;"><i class="bi bi-power"></i>Sign out: ${userName}</a></li>
         </ul>
@@ -55,7 +57,7 @@
   <div id="modal-sso-login" style="display: none;"></div>
 
   <!-- Global settings: initial the system -->
-  <div class="modal fade" id="modal-global-setting-initial" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+  <div class="modal fade" id="modal-global-initial" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
@@ -323,6 +325,42 @@
     </div>
   </div>
 
+
+  <!-- Modal: Global settings -->
+  <div class="modal fade" id="modal-global-settings" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="staticBackdropLabel">Global Settings</h5>
+          <button type="button" class="btn btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <div class="card bg-white mb-1" id="global-pause-settings">
+            <div class="card-header"><h5>Pause Settings</h5></div>
+            <div class="card-body">
+                <input type="text" name="id" style="display: none;">
+                <div class="form-check form-switch mb-3">
+                  <input class="form-check-input" type="checkbox" role="switch" name="paused" id="global-setting-pause-enabled" checked>
+                  <label class="form-check-label" for="global-setting-pause-enabled">Enable Paused</label>
+                </div>
+                <div class="input-group mb-3"> 
+                    <span class="input-group-text">Between</span>
+                    <input class="form-control" type="datetime-local" name="pausedStartTime">           
+                    <span class="input-group-text">and</span>
+                    <input class="form-control" type="datetime-local" name="pausedEndTime">                  
+                </div>
+            </div>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-primary" onclick="modalGlobalSetting.saveSettingItem();">Save</button>
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
   ${templateDepositJobs}
 
   <script>
@@ -345,6 +383,7 @@
   <script src="./app/settings-deposit-account.js"></script>
   <script src="./app/settings-flow.js"></script>
   <script src="./app/settings-whitelist.js"></script>
+  <script src="./app/settings-global.js"></script>
   <script src="./app/deposit-jobs.js"></script>
 
 
@@ -352,7 +391,8 @@
   <script>
     const HTML_IFRAME_LOGIN='<iframe src="login.html" scrolling="no" frameborder="0" allowfullscreen> </iframe>';
     const IS_GLOBAL_SETTING_INITIALED=true;
-    const modalGlobalSettingInitial = new bootstrap.Modal(document.getElementById('modal-global-setting-initial'), {keyboard: false});
+    const modalGlobalInitial = new bootstrap.Modal(document.getElementById('modal-global-initial'), {keyboard: false});
+
 
     function loginCallback(){
       $('#modal-sso-login').hide();
@@ -395,7 +435,7 @@
           initDepositJob();
           // initFlowSettings();
         }else{
-          modalGlobalSettingInitial.show();
+          modalGlobalInitial.show();
         }
     });
   </script>
