--- a/src/main/webapp/app/home.html
+++ b/src/main/webapp/app/home.html
@@ -214,8 +214,6 @@
                       </div>
 
                       <div class="input-group mb-3">
-                          <span class="input-group-text">Scan Interval (Seconds)</span>                        
-                          <input type="text" class="form-control" placeholder="1" , name="delays">
                           <span class="input-group-text">Max Active Days</span>
                           <input type="text" class="form-control" placeholder="14" , name="maxActiveDays">
                           <span class="input-group-text">Max Storage Days</span>
@@ -335,10 +333,10 @@
           <button type="button" class="btn btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
+          <input type="text" name="id" style="display: none;">
           <div class="card bg-white mb-1" id="global-pause-settings">
             <div class="card-header"><h5>Pause Settings</h5></div>
-            <div class="card-body">
-                <input type="text" name="id" style="display: none;">
+            <div class="card-body">                
                 <div class="form-check form-switch mb-3">
                   <input class="form-check-input" type="checkbox" role="switch" name="paused" id="global-setting-pause-enabled" checked>
                   <label class="form-check-label" for="global-setting-pause-enabled">Enable Paused</label>
@@ -348,6 +346,16 @@
                     <input class="form-control" type="datetime-local" name="pausedStartTime">           
                     <span class="input-group-text">and</span>
                     <input class="form-control" type="datetime-local" name="pausedEndTime">                  
+                </div>
+            </div>
+          </div>
+
+          <div class="card bg-white mb-1" id="global-pause-settings">
+            <div class="card-header"><h5>On Timer</h5></div>
+            <div class="card-body">
+                <div class="input-group mb-3">
+                    <span class="input-group-text">Scan Interval (Seconds)</span>                        
+                    <input type="text" class="form-control" placeholder="60", name="delays">
                 </div>
             </div>
           </div>
