Changed the default streamLocation to 'content' to include the mets.xml inside the statistic

--- a/src/main/webapp/app/home.html
+++ b/src/main/webapp/app/home.html
@@ -205,7 +205,7 @@
                   <div class="card-body">
                       <div class="input-group mb-3">
                           <span class="input-group-text">Stream Path</span>
-                          <input type="text" class="form-control" placeholder="content/streams" , name="streamLocation">
+                          <input type="text" class="form-control" placeholder="content" , name="streamLocation">
                       </div>
                       <div class="input-group mb-3">
                           <span class="input-group-text">Ingestion Completed File Name</span>
