Made the panel of the flow setting scrollable

--- a/src/main/webapp/app/home.html
+++ b/src/main/webapp/app/home.html
@@ -151,7 +151,7 @@
           <button type="button" class="btn btn-close" aria-label="Close" onclick="settingFlow.closePanel();"></button>
         </div>
       </div>
-      <div class="customized-card-body">
+      <div class="customized-card-body" style="overflow-y: auto;">
         <ul class="list-group list-group-numbered" id="flow-settings-list"></ul>        
       </div>
 
