Renamed the title of 'Flow Settings' to 'Material Flow Settings' and add enabled/disabled label for 'Material Flow Settings' list panel

--- a/src/main/webapp/app/home.html
+++ b/src/main/webapp/app/home.html
@@ -38,7 +38,7 @@
         <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-bs-toggle="dropdown" aria-expanded="false"><i class="bi bi-gear"></i>Settings</a>
         <ul class="dropdown-menu dropdown-menu-dark dropdown-menu-end" aria-labelledby="dropdown01">
           <li><a class="dropdown-item" href="#" onclick="settingDepositAccount.popupPanel();">Deposit Account Settings</a></li>
-          <li><a class="dropdown-item" href="#" onclick="settingFlow.popupPanel();">Materialflow Settings</a></li>
+          <li><a class="dropdown-item" href="#" onclick="settingFlow.popupPanel();">Material Flow Settings</a></li>
           <li><a class="dropdown-item" href="#" onclick="settingWhitelist.popupPanel();">User White List</a></li>
           <li><hr class="dropdown-divider"></li>
           <li><a class="dropdown-item" href="#" onclick="modalGlobalSetting.showSettingDetail();">Global Setting</a></li>
@@ -144,7 +144,7 @@
     <div class="card">
       <div class="card-header d-flex bd-highlight mb-3">
         <div class="p-1 bd-highlight">
-          <h5>Flow Settings</h5>            
+          <h5>Material Flow Settings</h5>
         </div>        
         <!-- <div class="p-3 bd-highlight">Flex item</div> -->
         <div class="ms-auto p-1 bd-highlight">
@@ -169,7 +169,7 @@
     <div class="modal-dialog modal-xl">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="staticBackdropLabel">Flow Settings</h5>
+          <h5 class="modal-title" id="staticBackdropLabel">Material Flow Settings</h5>
           <button type="button" class="btn btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">        
