Show the specific status which is available for the action

--- a/src/main/webapp/app/home.html
+++ b/src/main/webapp/app/home.html
@@ -18,6 +18,7 @@
   <link rel="stylesheet" href="./dist/toastr.min.css">
   <link rel="stylesheet" href="./app/dashboard.css">
   <script src="./dist/jquery-3.5.1.min.js"></script>
+
 </head>
 
 <body style="overflow: hidden;">
@@ -368,6 +369,40 @@
     </div>
   </div>
 
+  <!-- Error Message -->
+  <div class="modal fade" id="static-error-message" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+      <div class="modal-dialog">
+          <div class="modal-content">
+              <div class="modal-header bg-warning">
+                  <h5 class="modal-title" id="static-error-message-title"><i class="bi bi-exclamation-circle-fill"></i>&nbsp;Warning</h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                  <div>
+                      <div id="static-error-message-description"></div>
+                      <table class="table table-striped table-bordered" style="font-size:0.8em;">
+                          <thead class="bg-info">
+                          <tr>
+                              <th scope="col">State\Stage</th>
+                              <th scope="col">INGEST</th>
+                              <th scope="col">DEPOSIT</th>
+                              <th scope="col">FINALIZE</th>
+                              <th scope="col">FINISHED</th>
+                          </tr>
+                          </thead>
+                          <tbody id="static-error-message-details">
+                          </tbody>
+                      </table>
+                  </div>
+              </div>
+              <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                  <button type="button" class="btn btn-primary" onclick="continue_deposit_jobs_action();">Confirm</button>
+              </div>
+          </div>
+      </div>
+  </div>
+
 
   ${templateDepositJobs}
 
@@ -393,14 +428,14 @@
   <script src="./app/settings-whitelist.js"></script>
   <script src="./app/settings-global.js"></script>
   <script src="./app/deposit-jobs.js"></script>
-
+  <script src="./app/deposit-jobs-actions.js"></script>
 
 
   <script>
     const HTML_IFRAME_LOGIN='<iframe src="login.html" scrolling="no" frameborder="0" allowfullscreen> </iframe>';
     const IS_GLOBAL_SETTING_INITIALED=true;
     const modalGlobalInitial = new bootstrap.Modal(document.getElementById('modal-global-initial'), {keyboard: false});
-
+    const modalAlertWindow = new bootstrap.Modal(document.getElementById('static-error-message'), {keyboard: false});
 
     function loginCallback(){
       $('#modal-sso-login').hide();
@@ -427,6 +462,23 @@
       });
     }
 
+    var func_continue_deposit_jobs_action;
+
+    function showUnavailableActionAlert(msg, action, callback){
+        func_continue_deposit_jobs_action=callback;
+
+        $("#static-error-message-description").html(msg);
+        var table_body=create_available_status_tips(action);
+        $("#static-error-message-details").html(table_body);
+        modalAlertWindow.show();
+    }
+
+    function continue_deposit_jobs_action(){
+        modalAlertWindow.hide();
+        if(func_continue_deposit_jobs_action){
+            func_continue_deposit_jobs_action(gReqNodes, gAction);
+        }
+    }
     
     $(function(){
         toastr.options=Object.assign(toastr.options,{
