--- a/src/main/webapp/app/home.html
+++ b/src/main/webapp/app/home.html
@@ -250,9 +250,17 @@
                       </div>
 
                       <!-- Backup section -->
-                      <div class="form-check form-switch mb-3">
-                          <input class="form-check-input" type="checkbox" role="switch" name="backupEnabled">
-                          <label class="form-check-label" for="flow-setting-enabled">If backup the actual content for this material flow.</label>
+                        <!--                      <div class="form-check form-switch mb-3">-->
+                        <!--                          <input class="form-check-input" type="checkbox" role="switch" name="backupEnabled">-->
+                        <!--                          <label class="form-check-label" for="flow-setting-enabled">If backup the actual content for this material flow.</label>-->
+                        <!--                      </div>-->
+                      <div class="input-group mb-3">
+                          <span class="input-group-text">Backup Options For Actual Content:</span>
+                          <select class="form-control form-select mt-0" name="actualContentBackupOptions">
+                              <option value="notBackup">Not backup</option>
+                              <option value="backupContentsWithoutSubFolderName">Backup the contents without the subfolder name</option>
+                              <option value="backupSubFolder">Backup the structure of the subfolder</option>
+                          </select>
                       </div>
                       <div class="input-group mb-3">
                           <span class="input-group-text">Backup Location</span>
