uplifted the dropdown list of the producers and material flows

--- a/src/main/webapp/app/deposit-jobs.html
+++ b/src/main/webapp/app/deposit-jobs.html
@@ -9,7 +9,7 @@
           <!-- /.card-header -->
           <div class="modal-body">
               <div class="mb-3">
-                <label for="search-dt-deposit-job" class="form-label">Latested Update Datetime</label>
+                <label for="search-dt-deposit-job" class="form-label">Latest Update Datetime</label>
                 <input type="text" class="form-control" id="search-dt-deposit-job">
               </div>
 
