--- a/src/main/webapp/app/home.html
+++ b/src/main/webapp/app/home.html
@@ -543,8 +543,8 @@
 
          document.getElementById('input-producer').addEventListener('show.bs.dropdown', event => {
             console.log("shown");
-            var depositAccountId=$('#flow-settings select[name="depositAccount"]').val();
-            gridProducers.setData(PATH_RAW_PRODUCERS+'?depositAccountId=' + depositAccountId);
+            //var depositAccountId=$('#flow-settings select[name="depositAccount"]').val();
+            //gridProducers.setData(PATH_RAW_PRODUCERS+'?depositAccountId=' + depositAccountId);
             //gridProducers.setData(dataProducers);
             //console.log(dataProducers);
          });
