Upgraded the ag-grid

--- a/src/main/webapp/app/home.html
+++ b/src/main/webapp/app/home.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="./dist/bootstrap-icons.css">
     <link rel="stylesheet" href="./dist/icheck-bootstrap.min.css">
     <link rel="stylesheet" href="./dist/ag-theme-alpine.css">
+    <link rel="stylesheet" href="./dist/ag-theme-quartz.css">
     <link rel="stylesheet" href="./dist/jquery/menu/jquery.contextMenu.css">
     <link rel="stylesheet" href="./dist/daterangepicker.css">
     <link rel="stylesheet" href="./dist/toastr.min.css">
@@ -196,13 +197,13 @@
                           <input type="text" id="input-producer" name="producer" readonly="readonly" class="form-control form-select mt-0 dropdown-toggle bg-white" data-bs-toggle="dropdown" aria-expanded="true" data-bs-auto-close="outside">
                           <form class="dropdown-menu p-1 bg-light border border-2">
                               <input id="filter-producer" class="form-control mb-2" type="search" placeholder="Type to filter producer" aria-label="Search" style="width: 300px;">
-                              <div class="ag-theme-alpine" id="dropdown-grid-producers" style="width: 40vw; height: 450px;"></div>
+                              <div class="ag-theme-quartz" id="dropdown-grid-producers" style="width: 40vw; height: 450px;"></div>
                           </form>
                           <span class="input-group-text">Material Flow</span>
                           <input type="text" id="input-materialflow" name="materialFlow" readonly="readonly" class="form-control form-select mt-0 dropdown-toggle bg-white" data-bs-toggle="dropdown" aria-expanded="true" data-bs-auto-close="outside">
                           <form class="dropdown-menu p-1 bg-light border border-2">
                               <input id="filter-materialflow" class="form-control mb-2" type="search" placeholder="Type to filter material flow" aria-label="Search" style="width: 300px;">
-                              <div class="ag-theme-alpine" id="dropdown-grid-materialflows" style="width: 40vw; height: 500px;"></div>
+                              <div class="ag-theme-quartz" id="dropdown-grid-materialflows" style="width: 40vw; height: 500px;"></div>
                           </form>
                       </div>
 
