refactored the settings.js to fullfil the large number of producers

--- a/src/main/webapp/app/home.html
+++ b/src/main/webapp/app/home.html
@@ -142,7 +142,7 @@
     </div>
   </div>
 
-  <!-- Panel: Flow settings  -->
+  <!-- Panel: Flow settings list-->
   <div class="side-panel bg-light" id="panel-settings-flow">
     <div class="card">
       <div class="card-header d-flex bd-highlight mb-3">
@@ -167,7 +167,7 @@
   </div>
 
 
-  <!-- Modal: Flow settings -->
+  <!-- Modal: Flow setting -->
   <div class="modal modal-fullscreen-lg-down fade" id="modal-flow-settings" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
     <div class="modal-dialog modal-xl">
       <div class="modal-content">
