Replaced the ag-grid with tabulator

--- a/src/main/webapp/app/deposit-jobs.html
+++ b/src/main/webapp/app/deposit-jobs.html
@@ -51,7 +51,7 @@
           </div> <!-- End of card body -->
           <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-              <button type="button" class="btn btn-primary" onclick="searchDepoitJob();" name="search"><i class="fas fa-search"></i> Search</button>
+              <button type="button" class="btn btn-primary" onclick="searchDepositJob();" name="search"><i class="fas fa-search"></i> Search</button>
           </div>
       </div>
     </div>
