--- a/src/main/webapp/app/home.html
+++ b/src/main/webapp/app/home.html
@@ -20,17 +20,21 @@
     <link rel="stylesheet" href="./dist/toastr.min.css">
     <link rel="stylesheet" href="./app/dashboard.css">
 
-<!--    <link rel="stylesheet" href="./app/tabulator.css">-->
+
     <link rel="stylesheet" href="./app/tabulator-bootstrap5-dark.css">
 <!--        <link rel="stylesheet" href="./dist/tabulator/css/tabulator_bootstrap5.min.css">-->
 
-
     <script src="./dist/jquery-3.5.1.min.js"></script>
     <script src="./dist/tabulator/js/tabulator.min.js"></script>
+    <style>
+        .btn-success {
+            background: #009136;
+        }
+    </style>
 </head>
 
 <body style="overflow: hidden;">
-  <nav class="navbar navbar-expand-lg navbar-dark" style="padding: 0 0 0 5px; background: linear-gradient(to right, #212529, #212529, #198754, #212529);">
+  <nav class="navbar navbar-expand-lg navbar-dark" style="padding: 5px; background: linear-gradient(to right, #212529, #212529, #32CD32, #212529);">
     <a href="#" class="navbar-brand"><img src="./img/natlib-logo-orange.png" width="35" height="35">&nbsp;Deposit&nbsp;Dashboard</a>
     <form class="d-flex">
       <input id="filter-deposit-job" class="form-control me-2" type="search" placeholder="Type to filter" aria-label="Search">
@@ -60,7 +64,7 @@
   </nav>
 
   <main style="display: none;">
-        <div id="grid-deposit-jobs" class="tabulator-bootstrap5-dark tabulator"></div>
+        <div class="tabulator" id="grid-deposit-jobs" role="grid"></div>
   </main>
 
   <div id="modal-sso-login" style="display: none;"></div>
