--- a/src/main/webapp/app/home.html
+++ b/src/main/webapp/app/home.html
@@ -28,22 +28,66 @@
     <script src="./dist/tabulator/js/tabulator.min.js"></script>
     <style>
         .btn-success {
-            background: #009136;
+            /*background: #009136;*/
         }
     </style>
 </head>
 
 <body style="overflow: hidden;">
-  <nav class="navbar navbar-expand-lg navbar-dark" style="padding: 5px; background: linear-gradient(to right, #212529, #212529, #32CD32, #212529);">
+<!--  <nav class="navbar navbar-expand-lg">-->
+      <nav class="navbar navbar-expand-lg navbar-dark" style="padding: 5px; background: linear-gradient(to right, #212529, #212529, #32CD32, #212529);">
     <a href="#" class="navbar-brand"><img src="./img/natlib-logo-orange.png" width="35" height="35">&nbsp;Deposit&nbsp;Dashboard</a>
     <form class="d-flex">
-      <input id="filter-deposit-job" class="form-control me-2" type="search" placeholder="Type to filter" aria-label="Search">
+        <div class="input-group mb-2 mb-md-0">
+<!--            <span class="input-group-text bg-success text-light" style="border: 0px;"><i class="bi bi-funnel"></i></span>-->
+            <input id="filter-deposit-job" class="form-control" type="search" placeholder="Type to filter" aria-label="Search">
+        </div>
     </form>
 
     <ul class="navbar-nav me-auto mb-2 mb-md-0">
-      <button class="btn btn-success" type="button" data-bs-toggle="modal" data-bs-target="#search-deposit-job"><i class="bi bi-search"></i>&nbsp;Search</button>
-      <button class="btn btn-success" onclick="initDepositJob();"><i class="bi bi-arrow-clockwise"></i>&nbsp;Reload</button>
-      <button class="btn btn-success" onclick="exportSelectedJobs();"><i class="bi bi-download"></i>&nbsp;Export Selected Jobs</button>
+        <div class="dropdown">
+            <button type="button" class="btn btn-success dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false" data-bs-auto-close="outside">
+                Group
+            </button>
+            <form class="dropdown-menu p-2 bg-dark" action="javascript: groupByDepositJobs();">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckProducerName">
+                            <label class="form-check-label" for="flexCheckProducerName">
+                                Producer Name
+                            </label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckMaterialFlowName">
+                            <label class="form-check-label" for="flexCheckMaterialFlowName">
+                                Materialflow Name
+                            </label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckStage">
+                            <label class="form-check-label" for="flexCheckStage">
+                                Stage
+                            </label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckState">
+                            <label class="form-check-label" for="flexCheckState">
+                                State
+                            </label>
+                        </div>
+                    </div>
+
+                    <div class="card-footer">
+                        <button class="btn btn-outline-success" type="submit"  style="width:150px;">Group By</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+
+        <button class="btn btn-success" type="button" data-bs-toggle="modal" data-bs-target="#search-deposit-job"><i class="bi bi-search"></i>&nbsp;Search</button>
+        <button class="btn btn-success" onclick="initDepositJob();"><i class="bi bi-arrow-clockwise"></i>&nbsp;Reload</button>
+        <button class="btn btn-success" onclick="exportSelectedJobs();"><i class="bi bi-download"></i>&nbsp;Export Selected Jobs</button>
     </ul>
 
     <ul class="navbar-nav" id="control-right">
@@ -199,7 +243,7 @@
                       <div class="input-group mb-3">
                           <span class="input-group-text">Deposit Account</span>
                           <select class="form-control form-select mt-0" name="depositAccount"></select>
-                          <button type="button" class="btn btn-primary" onclick="settingFlow.saveSettingItem();" style="width: 50px;"><i class="bi bi-arrow-clockwise"></i></button>
+                          <button type="button" class="btn btn-primary" onclick="refreshTheDepositAccount();" style="width: 50px;"><i class="bi bi-arrow-clockwise"></i></button>
                       </div>
 
                       <div class="input-group mb-3">
@@ -466,6 +510,12 @@
                   <button type="button" class="btn btn-primary" onclick="continue_deposit_jobs_action();">Confirm</button>
               </div>
           </div>
+      </div>
+  </div>
+
+  <div class="spinner-container">
+      <div id="full-spinner" class="spinner-border text-light" role="status">
+          <span class="visually-hidden">Loading...</span>
       </div>
   </div>
 
