refactored the UI

--- a/src/main/webapp/app/deposit-jobs.html
+++ b/src/main/webapp/app/deposit-jobs.html
@@ -1,6 +1,6 @@
 <div class="modal fade" id="search-deposit-job" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="grid-deposit-jobs" aria-hidden="false">
     <div class="modal-dialog modal-lg modal-dialog-centered">
-        <div class="modal-content">
+        <div class="modal-content" data-bs-theme="dark">
           <div class="modal-header">
               <h3 class="modal-title">Search</h3>
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
