--- a/src/main/webapp/app/home.html
+++ b/src/main/webapp/app/home.html
@@ -544,7 +544,7 @@
   <script src="./app/settings-global.js"></script>
   <script src="./app/deposit-jobs.js"></script>
   <script src="./app/deposit-jobs-actions.js"></script>
-
+  <script src="./app/color-modes.js"></script>
 
   <script>
     const HTML_IFRAME_LOGIN='<iframe src="login.html" scrolling="no" frameborder="0" allowfullscreen> </iframe>';
