--- a/src/main/webapp/app/home.html
+++ b/src/main/webapp/app/home.html
@@ -32,7 +32,7 @@
         <button class="btn btn-success" type="button" data-bs-toggle="modal" data-bs-target="#search-deposit-job"><i class="bi bi-search"></i>&nbsp;Search</button>
         <button class="btn btn-success" onclick="initDepositJob();"><i class="bi bi-arrow-clockwise"></i>&nbsp;Reload</button>
         <button class="btn btn-success" onclick="exportSelectedJobs();"><i class="bi bi-download"></i>&nbsp;Export Selected Jobs</button>
-        <button class="btn btn-success" onclick="showModalRedepositJob();"><i class="bi bi-tools"></i>&nbsp;Redeposit</button>
+        <button class="btn btn-success" onclick="showModalRedepositJob();"><i class="bi bi-pencil-square"></i>&nbsp;Redeposit</button>
     </ul>
 
     <ul class="navbar-nav" id="control-right">
